Add production config